--- a/WN/pam.html
+++ b/WN/pam.html
@@ -280,14 +280,14 @@ m8 → Ubermacht W8 Contention
 м8 → Ubermacht W8 Contention
 w8 → Ubermacht W8 Contention
 в8 → Ubermacht W8 Contention
-:R:х5м → Ubermacht Y5W
-:R:x5m → Ubermacht Y5W
-:R:y5м → Ubermacht Y5W
-:R:у5m → Ubermacht Y5W
-:R:х7 → Ubermacht Y7
-:R:x7 → Ubermacht Y7
-:R:y7 → Ubermacht Y7
-:R:у7 → Ubermacht Y7
+х5м → Ubermacht Y5W
+x5m → Ubermacht Y5W
+y5м → Ubermacht Y5W
+у5m → Ubermacht Y5W
+х7 → Ubermacht Y7
+x7 → Ubermacht Y7
+y7 → Ubermacht Y7
+у7 → Ubermacht Y7
 chall → Bravado Contender
 челл → Bravado Contender
 чалл → Bravado Contender
@@ -640,10 +640,10 @@ gg70 → Bollokan G70
 bg70 → Bollokan G70
 бг70 → Bollokan G70
 гровлер → Growler
-:R:фх50 → Fathom XF50
-:R:fx50 → Fathom XF50
-:R:xf50 → Fathom XF50
-:R:хф50 → Fathom XF50
+фх50 → Fathom XF50
+fx50 → Fathom XF50
+xf50 → Fathom XF50
+хф50 → Fathom XF50
 q50 → Fathom Q50
 к50 → Fathom Q50
 gtb → Itali GTB
