--- a/WN/pam.html
+++ b/WN/pam.html
@@ -1,5 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
+  <head>
+    <title>AutoReplace Weazel News: App</title>
+    <link rel="icon" href="https://i.ibb.co/KmqnFvy/600px-Apple-News-icon-i-OS-1.png" type="image/x-icon">
+</head>
 <head>
  <!-- Подключение Font Awesome -->
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
