--- a/WN/index.html
+++ b/WN/index.html
@@ -597,6 +597,43 @@ ultima → Annis Ultima
 вейдер → Vader
 
 <p class='neonexclus-text'><i class="fas fa-car"></i> Эксклюзивные</p>
+корветт → Declasse Covetto
+corvett → Declasse Covetto
+спидт → Progen SpeedT
+speedt → Progen SpeedT
+танк5 → Tank 500
+tank5 → Tank 500
+камаро → Declasse Camaro
+camaro → Declasse Camaro
+джулия → Lampadati Julia
+julia → Lampadati Julia
+грома → Grotti Roma
+groma → Grotti Roma
+каен → Pfister Rayenne
+cayenne → Pfister Rayenne
+раен → Pfister Rayenne
+rayenne → Pfister Rayenne
+регера → Overflod Rejera
+regera → Overflod Rejera
+rejera → Overflod Rejera
+ферлафер → Grotti LaGrotti
+ferlafer → Grotti LaGrotti
+гротлагрот → Grotti LaGrotti
+grotlagrot → Grotti LaGrotti
+cl63 → Benefactor CL63
+цл63 → Benefactor CL63
+бенеф66 → Benefactor Y 6x6
+бенефи → Benefactor Y
+вапкарго → Vapid Cargo
+vapcargo → Vapid Cargo
+транзит → Vapid Cargo
+transit → Vapid Cargo
+миникупер → Weenny Countryman
+minicoop → Weenny Countryman
+винни → Weenny Countryman
+weenny → Weenny Countryman
+jle53 → Benefactor JLE53
+жле53 → Benefactor JLE53
 ае86 → Karin Brueno AE86
 ae86 → Karin Brueno AE86
 е36 → Ubermacht E36
@@ -1009,6 +1046,13 @@ duster → Maibatsu Duster
 рав4 → Karin RAW4
 rav4 → Karin RAW4
 raw4 → Karin RAW4
+квадра → Quadra VTech
+quadra → Quadra VTech
+арчер → Archer Hella
+archer → Archer Hella
+скулбас → School Bus
+шкавт → School Bus
+scbus → School Bus
 
 <p class='neon2-text'><i class="fas fa-train"></i> Ретро и маслкары</p>
 лп400 → Pegassi Coutron LP-400
@@ -1032,8 +1076,8 @@ m140 → Benefactor S-series 600 M140
 е500 → Mercedes Benz E500
 с63 → Mercedes Benz C63
 c63 → Mercedes Benz C63
-м4 → Ubermacht M4
-m4 → Ubermacht M4
+м4 → Ubermacht W4 J82
+m4 → Ubermacht W4 J82
 190з → 190z
 блейд → Blade
 бриосо → Brioso 300
