--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>elscripts</title>
+  <meta name="google-site-verification" content="kOFT2VSDZKy8Ait1i06Cxv40msiGnIRSj48-fldbcb0" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="icon" type="image/png" href="https://i.ibb.co/hgzJMtN/image.png">
