--- a/WN/autoreplace/index.html
+++ b/WN/autoreplace/index.html
@@ -356,7 +356,7 @@
 <body>
   <div class="logo-container">
     <img class="logo" src="https://i.ibb.co/hgzJMtN/image.png" alt="Logo">
-    <span class="elvis-text">Elvis Script's</span>
+    <span class="elvis-text">elscripts</span>
   </div>
  <!-- Your existing HTML code ... -->
 
