--- a/WN/autoreplace/index.html
+++ b/WN/autoreplace/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>AutoReplace Weazel News: App</title>
@@ -161,6 +161,16 @@
   }
 
   .neonnedvijim-text {
+    color: #ffffff; /* Изменим цвет текста на розовый */
+ font-size: 18px;
+ font-weight: bold;
+ padding: 0px 0px;
+ border-radius: 0px;
+ text-align: center;
+ margin: 0; /* Убираем вертикальный отступ */
+  }
+
+  .znakom-text {
     color: #ffffff; /* Изменим цвет текста на розовый */
  font-size: 18px;
  font-weight: bold;
@@ -402,6 +412,8 @@
  <button class="fast-button" onclick="scrollTotourobjets()"><i class="fas fa-arrow-down"></i> Туристические объекты</button>
  <button class="fast-button" onclick="scrollTogorodarayon()"><i class="fas fa-arrow-down"></i> Города и районы</button>
  <button class="fast-button" onclick="scrollTonedvijim()"><i class="fas fa-arrow-down"></i> Недвижимость и бизнесы +(г.м, подвалы т.п)</button>
+ <button class="fast-button" onclick="scrollToznakom()"><i class="fas fa-arrow-down"></i> Знакомства</button>
+ <button class="fast-button" onclick="scrollToznakom()"><i class="fas fa-arrow-down"></i> Прочее (Ганы, нарко, кейсы, качалка, випки, питомцы и тп)</button>
 </div>
  <p class='neon-text'><i class="fas fa-car"></i> Транспорт</p>
  <p class='neonlimit-text'><i class="fas fa-car"></i> Лимитированные</p>
@@ -1245,6 +1257,74 @@ rumpo → Bravado Rumpo Box
 брикад → MTL Brickade
 бенсон → Vapid Benson
 
+<p class='neon2-text'><i class="fas fa-car-side"></i> Прочие замены т/с</p>
+любмарк → любой марки
+продама → Продам автомобиль марки
+куплюа → Куплю автомобиль марки
+продамм → Продам мотоцикл марки
+куплюм → Куплю мотоцикл марки
+продамл → Продам лодку марки
+куплюл → Куплю лодку марки
+продамс → Продам самолет марки
+куплюс → Куплю самолет марки
+продамв → Продам вертолет марки
+куплюв → Куплю вертолет марки
+свинил → с виниловыми наклейками
+продкупа → Продам купон на автомобиль марки .
+купкупа → Куплю купон на автомобиль марки .
+продвинил → Продам виниловые наклейки с узором "" на а/м марки
+купвинил → Куплю виниловые наклейки на а/м марки
+куптнаб1 → Куплю набор транспортных компонентов 1 поколения.
+куптнаб2 → Куплю набор транспортных компонентов 2 поколения.
+куптнаб3 → Куплю набор транспортных компонентов 3 поколения.
+куптнаб4 → Куплю набор транспортных компонентов 4 поколения.
+продтнаб1 → Продам набор транспортных компонентов 1 поколения.
+продтнаб2 → Продам набор транспортных компонентов 2 поколения.
+продтнаб3 → Продам набор транспортных компонентов 3 поколения.
+продтнаб4 → Продам набор транспортных компонентов 4 поколения.
+продтдет → Продам транспортную деталь "" в количестве
+куптдет → Куплю транспортную деталь "" в количестве
+продпрогр1 → Продам устройство для транспорта "Программатор 1 поколения".
+продпрогр2 → Продам устройство для транспорта "Программатор 2 поколения".
+продпрогр3 → Продам устройство для транспорта "Программатор 3 поколения".
+продпрогр4 → Продам устройство для транспорта "Программатор 4 поколения".
+куппрогр1 → Куплю устройство для транспорта "Программатор 1 поколения".
+куппрогр2 → Куплю устройство для транспорта "Программатор 2 поколения".
+куппрогр3 → Куплю устройство для транспорта "Программатор 3 поколения".
+куппрогр4 → Куплю устройство для транспорта "Программатор 4 поколения".
+проднрам → Продам рамку для транспортного номера .
+купнрам → Куплю рамку для транспортного номера .
+продномер → Продам транспортные номера формата "".
+купномер → Куплю транспортные номера
+ft → FT
+фт → FT
+снастр → с системой настроек
+cyfcnh → с системой настроек
+двиг4 → Двигатель 4 поколения
+двиг3 → Двигатель 3 поколения
+двиг2 → Двигатель 2 поколения
+двиг1 → Двигатель 1 поколения
+чип4 → Чип-тюнинг 4 поколения
+чип3 → Чип-тюнинг 3 поколения
+чип2 → Чип-тюнинг 2 поколения
+чип1 → Чип-тюнинг 1 поколения
+тормо4 → Тормоза 4 поколения
+тормо3 → Тормоза 3 поколения
+тормо2 → Тормоза 2 поколения
+тормо1 → Тормоза 1 поколения
+трансм4 → Трансмиссия 4 поколения
+трансм3 → Трансмиссия 3 поколения
+трансм2 → Трансмиссия 2 поколения
+трансм1 → Трансмиссия 1 поколения
+прогр4 → Программатор 4 поколения
+прогр3 → Программатор 3 поколения
+прогр2 → Программатор 2 поколения
+прогр1 → Программатор 1 поколения
+счипт4 → с установленным Чип-тюнингом 4 поколения
+счипт3 → с установленным Чип-тюнингом 3 поколения
+счипт2 → с установленным Чип-тюнингом 2 поколения
+счипт1 → с установленным Чип-тюнингом 1 поколения
+
  <p class='neonresiuroj-text'><i class="fas fa-coins"></i> Ресурсы</p>
  продхлоп → Продам урожай "Хлопок" в количестве  штук.
  продвиног → Продам урожай "Виноград" в количестве  штук.
@@ -1369,6 +1449,98 @@ ljujd → договорная
 ролрейв → Rolex Oyster Perpetual Cosmograph Rainbow Pave
 улисс → Ulysse Nardin Marine Diver
 
+<p class='neonmotiki-text'><i class="fas fa-stopwatch"></i> Одежда</p>
+продфутб → Продам футболку .
+продэфутб → Продам эксклюзивную футболку .
+продкросс → Продам кроссовки .
+продэкросс → Продам эксклюзивные кроссовки .
+продсвит → Продам свитер .
+продэсвит → Продам эксклюзивный свитер .
+продхуд → Продам худи .
+продэхуд → Продам эксклюзивное худи .
+продобув → Продам обувь .
+продэобув → Продам эксклюзивную обувь .
+продшорт → Продам шорты .
+продэшорт → Продам эксклюзивные шорты .
+продштан → Продам штаны .
+продэштан → Продам эксклюзивные штаны .
+продсет → Продам сет .
+продэсет → Продам эксклюзивный сет .
+продрюкз → Продам рюкзак .
+продэрюкз → Продам эксклюзивный рюкзак .
+продсумк → Продам сумку .
+продэсумк → Продам эксклюзивную сумку .
+продюб → Продам юбку .
+продэюбк → Продам эксклюзивную юбку .
+продтоп → Продам топик .
+продэтоп → Продам эксклюзивный топик .
+продблуз → Продам блузку .
+продэблуз → Продам эксклюзивную блузку .
+продхалат → Продам халат .
+продэхалат → Продам эксклюзивный халат .
+продчас → Продам часы марки .
+продэчас → Продам эксклюзивные часы марки .
+продперч → Продам перчатки  цвета.
+продэперч → Продам эксклюзивные перчатки  цвета.
+продпидж → Продам пиджак .
+продэпидж → Продам эксклюзивный пиджак .
+продмаск → Продам маску .
+продэмаск → Продам эксклюзивную маску .
+продпанам → Продам панаму .
+продэпанам → Продам эксклюзивную панаму .
+продкурт → Продам куртку .
+продэкурт → Продам эксклюзивную куртку .
+продочк → Продам очки .
+продэочк → Продам эксклюзивные очки .
+купфутб → Куплю футболку .
+купэфутб → Куплю эксклюзивную футболку .
+купкросс → Куплю кроссовки .
+купэкросс → Куплю эксклюзивные кроссовки .
+купсвит → Куплю свитер .
+купэсвит → Куплю эксклюзивный свитер .
+купхуд → Куплю худи .
+купэхуд → Куплю эксклюзивное худи .
+купобув → Куплю обувь .
+купэобув → Куплю эксклюзивную обувь .
+купшорт → Куплю шорты .
+купэшорт → Куплю эксклюзивные шорты .
+купштан → Куплю штаны .
+купэштан → Куплю эксклюзивные штаны .
+купсет → Куплю сет .
+купэсет → Куплю эксклюзивный сет .
+купрюкз → Куплю рюкзак .
+купэрюкз → Куплю эксклюзивный рюкзак .
+купсумк → Куплю сумку .
+купэсумк → Куплю эксклюзивную сумку .
+купюб → Куплю юбку .
+купэюбк → Куплю эксклюзивную юбку .
+куптоп → Куплю топик .
+купэтоп → Куплю эксклюзивный топик .
+купблуз → Куплю блузку .
+купэблуз → Куплю эксклюзивную блузку .
+купхалат → Куплю халат .
+купэхалат → Куплю эксклюзивный халат .
+купчас → Куплю часы марки .
+купэчас → Куплю эксклюзивные часы марки .
+купперч → Куплю перчатки  цвета.
+купэперч → Куплю эксклюзивные перчатки  цвета.
+куппидж → Куплю пиджак .
+купэпидж → Куплю эксклюзивный пиджак .
+купмаск → Куплю маску .
+купэмаск → Куплю эксклюзивную маску .
+куппанам → Куплю панаму .
+купэпанам → Куплю эксклюзивную панаму .
+купкурт → Куплю куртку .
+купэкурт → Куплю эксклюзивную куртку .
+купочк → Куплю очки .
+купэочк → Куплю эксклюзивные очки .
+продспарам → Продам сумку парамедика.
+купспарам → Куплю сумку парамедика.
+продсинстр → Продам сумку инструментов.
+купсинстр → Куплю сумку инструментов.
+проднаушн → Продам беспроводные брендовые наушники.
+купнаушн → Куплю беспроводные брендовые наушники.
+
 <p class='neonmotiki-text'><i class="fas fa-copyright"></i> Бренды</p>
 фенди → Fendi
 гуччи → Gucci
@@ -1420,26 +1592,58 @@ ascl → Anti Social Club
 <p class='neonribalka-text'><i class="fas fa-fish"></i> Рыбалка</p>
 продзуд → Продам золотую удочку.
 продууд → Продам улучшенную удочку.
-продсуд → Продам сверхновую удочку.
-продупоп → Продам снаряжение "Улучшенный поплавок".
-продспоп → Продам снаряжение "Сверхновый поплавок".
-продзпоп → Продам снаряжение "Золотой поплавок".
-продкрюч → Продам снаряжение "Крючок".
-продлеск → Продам снаряжение "Леска".
+продсуд → Продам серебряную удочку.
+продбуд → Продам бустер удочку.
+проджуд → Продам железную удочку.
+продмуд → Продам медную удочку.
+продуд → Продам медную удочку.
 купзуд → Куплю золотую удочку.
 купууд → Куплю улучшенную удочку.
-купсуд → Куплю сверхновую удочку.
-купупоп → Куплю снаряжение "Улучшенный поплавок".
-купспоп → Куплю снаряжение "Сверхновый поплавок".
-купзпоп → Куплю снаряжение "Золотой поплавок".
-купкрюч → Куплю снаряжение "Крючок".
-куплеск → Куплю снаряжение "Леска".
+купсуд → Куплю серебряную удочку.
+купбуд → Куплю бустер удочку.
+купжуд → Куплю железную удочку.
+купмуд → Куплю медную удочку.
+купуд → Куплю медную удочку.
+продпоп → Продам снаряжение для рыбалки "Поплавок".
+куппоп → Куплю снаряжение для рыбалки "Поплавок".
+продкрюч → Продам снаряжение для рыбалки "Крючок".
+продлеск → Продам снаряжение для рыбалки "Леска".
+купкрюч → Куплю снаряжение для рыбалки "Крючок".
+куплеск → Куплю снаряжение для рыбалки "Леска".
+продчерв → Продам наживку "Черви" в
+купчерв → Куплю наживку "Черви" в
+продбмот → Продам наживку "Банка мотыля" в
+купбмот → Куплю наживку "Банка мотыля" в
+продбчерв → Продам наживку "Банка с червями" в
+купбчерв → Куплю наживку "Банка с червями" в
 
 <p class='neondiving-text'><i class="fas fa-vest-patches"></i> Дайвинг</p>
-<p class='neonmotiki-text'><i class="far fa-dot-circle fa-pulse"></i> Будет добавлено позже!</p>
+продпэдайв → Продам полную экипировку для дайвинга ().
+куппэдайв → Куплю полную экипировку для дайвинга ().
+продлокат → Продам экипировку для дайвинга «Подводный локатор».
+куплокат → Куплю экипировку для дайвинга «Подводный локатор».
+купукомп → Куплю оборудование для дайвинга «Улучшенный компрессор».
+продукомп → Продам оборудование для дайвинга «Улучшенный компрессор».
+купкомп → Куплю оборудование для дайвинга «Компрессор».
+продкомп → Продам оборудование для дайвинга «Компрессор».
+купгидр → Куплю экипировку для дайвинга «Гидрокостюм» ().
+продгидр → Продам экипировку для дайвинга «Гидрокостюм» ().
+продбал → Продам экипировку для дайвинга «Кислородный баллон л».
+купбал → Куплю экипировку для дайвинга «Кислородный баллон л».
 
 <p class='neontourobjets-text'><i class="fas fa-trash-alt"></i> Туристические объекты</p>
-<p class='neonmotiki-text'><i class="far fa-dot-circle fa-pulse"></i> Будет добавлено позже!</p>
+проднабтур → Продам набор туристических принадлежностей.
+купнабтур → Куплю набор туристических принадлежностей.
+продполар → Продам портативную фотокамеру полароид.
+купполар → Куплю портативную фотокамеру полароид.
+проднабстол → Продам набор раскладных столиков для туризма.
+купнабстол → Куплю набор раскладных столиков для туризма.
+продтурпал → Продам туристическую палатку.
+куптурпал → Куплю туристическую палатку.
+продпколон → Продам портативную колонку.
+куппколон → Куплю портативную колонку.
+продббт → Продам набор BBQ для туризма.
+купббт → Куплю набор BBQ для туризма.
 
 <p class='neongorodarayon-text'><i class="fas fa-city"></i> Города и районы</p>
 <p class='neonmotiki-text'><i class="far fa-building"></i> Города</p>
@@ -1540,6 +1744,19 @@ d.alt → д.Альтруистов
 продпп → Продам предприятие
 купприст → Куплю место на пристани.
 продприст → Продам место на пристани.
+продап1 → Продам апартаменты в жилом комплексе №1.
+продап2 → Продам апартаменты в жилом комплексе №2.
+продап3 → Продам апартаменты в жилом комплексе №3.
+продап4 → Продам апартаменты в жилом комплексе №4.
+продап5 → Продам апартаменты в жилом комплексе №5.
+купап1 → Куплю апартаменты в жилом комплексе №1.
+купап2 → Куплю апартаменты в жилом комплексе №2.
+купап3 → Куплю апартаменты в жилом комплексе №3.
+купап4 → Куплю апартаменты в жилом комплексе №4.
+купап5 → Куплю апартаменты в жилом комплексе №5.
+купапл → Куплю апартаменты в жилом комплексе.
+продофис → Продам офис в бизнес центре № .
+купофис → Куплю офис в бизнес центре № .
 продпарк1 → Продам место в парковочном комплексе №1.
 продпарк2 → Продам место в парковочном комплексе №2.
 продпарк3 → Продам место в парковочном комплексе №3.
@@ -1560,6 +1777,88 @@ d.alt → д.Альтруистов
 куппарк9 → Куплю место в парковочном комплексе №9.
 куплтпарк → Куплю парковочное место в любой точке штата.
 куплпарк → Куплю парковочное место в
+
+<p class='znakom-text'><i class="fas fa-mask"></i> Знакомства</p>
+ищудев → Познакомлюсь с красивой девушкой для . О себе:
+ищучел → Ищу человека по имени . Просьба связаться
+
+<p class='znakom-text'><i class="fas fa-mask"></i> Прочее</p>
+продсим → Продам SIM-Card формата "".
+купсим → Куплю SIM-Card формата "".
+продпав1 → Продам торговый павильон 1 размера.
+продпав2 → Продам торговый павильон 2 размера.
+продпав3 → Продам торговый павильон 3 размера.
+продпав4 → Продам торговый павильон 4 размера.
+куппав1 → Куплю торговый павильон 1 размера.
+куппав2 → Куплю торговый павильон 2 размера.
+куппав3 → Куплю торговый павильон 3 размера.
+куппав4 → Куплю торговый павильон 4 размера.
+куппавл → Куплю торговый павильон любого размера.
+продкупс → Продам купоны сообщества в
+купкупс → Куплю купоны сообщества в
+продган → Продам страйкбольное оружие .
+купган → Куплю страйкбольное оружие .
+продэган → Продам эксклюзивное страйкбольное оружие .
+купэган → Куплю эксклюзивное страйкбольное оружие .
+продпист → Продам водяной пистолет .
+куппист → Куплю водяной пистолет .
+продпатр → Продам игрушечные патроны  цвета в
+куппатр → Куплю игрушечные патроны  цвета в
+гузик → Гузенберг
+карабин → Автоматическая винтовка
+пулик → Автоматический пулемёт
+ревик → Револьвер
+продброн → Продам снаряжение для страйкбола бронежилет "".
+купброн → Куплю снаряжение для страйкбола бронежилет "".
+проднарко → Продам чай марки "" в.
+купнарко → Куплю чай марки "" в.
+продсобак → Продам собаку породы .
+купсобак → Куплю собаку породы .
+продкошк → Продам кошку  окраса.
+купкошк → Куплю кошку  окраса.
+продкрыс → Продам крысу.
+купкрыс → Продам крысу.
+продошейн → Продам ошейник для питомца в
+купошейн → Куплю ошейник для питомца в
+продкост → Продам лакомство для питомца "Кость" в
+купкост → Куплю лакомство для питомца "Кость" в
+продвип → Продам подписку  на .
+купвип → Куплю подписку  на .
+продурац → Продам улучшенную портативную рацию.
+купурац → Куплю улучшенную портативную рацию.
+продрац → Продам портативную рацию.
+купрац → Куплю портативную рацию.
+продмкейс → Продам подарочный кейс синего цвета в
+продзкейс → Продам подарочный кейс золотого цвета в
+продскейс → Продам подарочный кейс серебряного цвета в
+продбкейс → Продам подарочный кейс бронзового цвета в
+продткейс → Продам подарочный транспортный кейс № в
+продбронкейс → Продам подарочный кейс с бронежилетами в
+продзимкейс → Продам подарочный зимний кейс в
+продхкейс → Продам подарочный хэллоуинский кейс в
+купмкейс → Куплю подарочный кейс синего цвета в
+купзкейс → Куплю подарочный кейс золотого цвета в
+купскейс → Куплю подарочный кейс серебряного цвета в
+купбкейс → Куплю подарочный кейс бронзового цвета в
+купткейс → Куплю подарочный транспортный кейс № в
+купбронкейс → Куплю подарочный кейс с бронежилетами в
+купзимкейс → Куплю подарочный зимний кейс в
+купхкейс → Куплю подарочный хэллоуинский кейс в
+продэбат → Продам питательный энергетический батончик в
+купэбат → Куплю питательный энергетический батончик в
+продпбат → Продам питательный протеиновый батончик в
+куппбат → Куплю питательный протеиновый батончик в
+продэсм → Продам питательную энергетическую смесь в
+купэсм → Куплю питательную энергетическую смесь в
+продпсм → Продам питательную протеиновую смесь в
+куппсм → Куплю питательную протеиновую смесь в
+проддрон → Продам гражданский дрон.
+купдрон → Куплю гражданский дрон.
+продпуд → Продам Пульт ДУ для дрона.
+куппуд → Куплю Пульт ДУ для дрона.
+продпропд → Продам компонент для дрона "Пропеллеры".
+куппропд → Куплю компонент для дрона "Пропеллеры".
+
   </pre>
  </div>
 
@@ -1686,6 +1985,12 @@ d.alt → д.Альтруистов
   }
   function scrollTonedvijim() {
     var limitirHeading = document.querySelector(".neonnedvijim-text");
+    if (limitirHeading) {
+      limitirHeading.scrollIntoView({ behavior: "smooth" });
+    }
+  }
+  function scrollToznakom() {
+    var limitirHeading = document.querySelector(".znakom-text");
     if (limitirHeading) {
       limitirHeading.scrollIntoView({ behavior: "smooth" });
     }
