--- a/WN/autoreplace/index.html
+++ b/WN/autoreplace/index.html
@@ -1065,6 +1065,46 @@ archer → Archer Hella
 скулбас → School Bus
 шкавт → School Bus
 scbus → School Bus
+кприд → Canis Predator Winter `23
+гладиатор → Canis Predator Winter `23
+gladiator → Canis Predator Winter `23
+cpred → Canis Predator Winter `23
+g55 → Benefactor J55 Winter `23
+j55 → Benefactor J55 Winter `23
+ew63 → Benefactor E63 Winter `23
+ев63 → Benefactor E63 Winter `23
+bm3 → Ubermacht W3 Winter `23
+бм3 → Ubermacht W3 Winter `23
+uw3 → Ubermacht W3 Winter `23
+ув3 → Ubermacht W3 Winter `23
+хамев → Mammoth EV Winter `23
+мамев → Mammoth EV Winter `23
+humev → Mammoth EV Winter `23
+mamev → Mammoth EV Winter `23
+хуракв → Pegassi Hurricane Rally Winter `23
+huracw → Pegassi Hurricane Rally Winter `23
+huricw → Pegassi Hurricane Rally Winter `23
+хурикв → Pegassi Hurricane Rally Winter `23
+уру66 → Pegassi Ursus 6X6 Winter `23
+uru66 → Pegassi Ursus 6X6 Winter `23
+мистрал → Truffade Wistral Winter `23
+mistral → Truffade Wistral Winter `23
+wistral → Truffade Wistral Winter `23
+вистрал → Truffade Wistral Winter `23
+фракас → Dinka Frakas Winter `23
+frakas → Dinka Frakas Winter `23
+техномар → Pegassi Tecnomar Winter `23
+tecnomar → Pegassi Tecnomar Winter `23
+букингам → Buckingham AW Winter `23
+buckingh → Buckingham AW Winter `23
+серена → Progen Serena Winter `23
+сенна → Progen Serena Winter `23
+serena → Progen Serena Winter `23
+senna → Progen Serena Winter `23
+кибертрак → Coil Electruck
+cybertruck → Coil Electruck
+электрак → Coil Electruck
+electruck → Coil Electruck
 
 <p class='neon2-text'><i class="fas fa-train"></i> Ретро и маслкары</p>
 лп400 → Pegassi Coutron LP-400
@@ -1546,20 +1586,27 @@ ljujd → договорная
 гуччи → Gucci
 армани → Armani
 луивит → Louis Vuitton
-оффвайт → Off-White
-адидас → Adidas
-найк → Nike
+оффвайт → Of-White
+адидас → Adibas
+найк → Naik
 кензо → Kenzo
 полоральф → Polo Ralph Lauren
 суприм → Supreme
 томхефлиг → Tommy Hilfiger
 чемпион → Champion
 битсоло → Beats Solo
-джордан → Nike Air Jordan
-изики → Adidas Yeezy
-форсы → Nike Air Force
+гортекс → Gore Tex
+пума → Puma
+ванс → Van
+данки → Naik Dunk SB Low
+фила → Fila
+кроксы → Crocs
+ньюбал → New Balance
+джордан → Naik Air Jordan
+изики → Adibas Yeezy
+форсы → Naik Air Force
 ванс → Vans
-максы → Nike Air Max
+максы → Naik Air Max
 антисошл → Anti Social Social Club
 пальманг → Palm Angels
 аниме → Anime
